# Automated-Penetration-Testing-system

./: .env.example  .gitignore  Caddyfile  LICENSE  README.md  SKILL.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260419_000001_initial_backend_schema.py  20260419_000002_add_findings_table.py  20260420_000003_add_tool_invocations_and_finding_evidence_refs.py  20260420_000004_relax_legacy_tool_invocation_constraints.py  20260420_000005_add_reports_table.py  20260420_000006_add_tool_execution_artifacts.py  20260425_000007_add_users_table.py  20260426_000008_add_knowledge_chunks_table.py  20260427_000009_add_agent_runs_table.py  20260427_000010_add_agent_run_id_to_approvals.py  20260429_000011_add_auth_columns_to_users.py
backend/app/: main.py
backend/app/agents/: prompts.py  runner.py  state.py  supervisor.py
backend/app/api/: auth_routes.py  chat_routes.py  knowledge_routes.py  routes.py
backend/app/core/: agent_runs.py  approvals.py  audit.py  audit_service.py  auth.py  config.py  database.py  engagements.py  execution_parsers.py  finding_suggestions.py  findings.py  gateway_tokens.py  gateway_validation.py  llm_client.py  migration_bootstrap.py  reports.py  (+5 more)
backend/scripts/: create_user.py  ingest_kb.py  smoke_agents.py  start-backend.sh
tool-gateway/: Dockerfile.kali  pyproject.toml
tool-gateway/deploy/: pentai-tool-gateway.service
tool-gateway/gateway/: app.py  auth.py  executor.py  server.py
tool-gateway/scripts/: mtls_smoke.py
tool-gateway/tests/: test_gateway.py
(+126 files in other folders)
