[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "pentai-tool-gateway"
version = "0.1.0"
description = "Scope-safe Tool Gateway for PentAI Pro"
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
